[workspace]
resolver = "2"
members = ["tss-esapi", "tss-esapi-sys"]

[patch.crates-io]
p192 = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
p224 = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
sm2 = { git = "https://github.com/RustCrypto/elliptic-curves.git" }

rsa = { git = "https://github.com/RustCrypto/RSA.git" }
