[package]
name = "tss-esapi-sys"
version = "0.7.0-alpha.1"
authors = ["Parsec Project Contributors"]
edition = "2024"
description = "FFI wrapper around TSS 2.0 Enhanced System API"
readme = "README.md"
keywords = ["tpm", "tss", "esys", "esapi"]
categories = ["api-bindings", "external-ffi-bindings", "cryptography"]
license = "Apache-2.0"
repository = "https://github.com/parallaxsecond/rust-tss-esapi"
documentation = "https://docs.rs/crate/tss-esapi-sys"
links = "tss2-esys"
rust-version = "1.85.0"

[build-dependencies]
bindgen = { version = "0.72.1", optional = true }
pkg-config = "0.3.32"
target-lexicon = "0.13.5"
cfg-if = "1.0.4"
semver = "1.0.27"
autotools = { version = "0.2.7", optional = true }

[target.'cfg(windows)'.build-dependencies]
msbuild = { version = "0.2.1", optional = true }

[features]
generate-bindings = ["bindgen", "dep:msbuild"]
bundled = ["dep:autotools", "dep:msbuild"]
