[package]
name = "tss-esapi"
version = "8.0.0-alpha"
authors = ["Parsec Project Contributors"]
edition = "2021"
description = "Rust-native wrapper around TSS 2.0 Enhanced System API"
readme = "README.md"
keywords = ["tpm", "tss", "esys", "esapi"]
categories = ["api-bindings", "external-ffi-bindings", "cryptography"]
license = "Apache-2.0"
repository = "https://github.com/parallaxsecond/rust-tss-esapi"
documentation = "https://docs.rs/crate/tss-esapi"
rust-version = "1.74.0"

[[example]]
name = "hmac"

[[example]]
name = "certify"
required-features = ["abstraction"]

[dependencies]
bitfield = "0.17.0"
serde = { version = "1.0.115", features = [
    "derive",
], optional = true, default-features = false }
malloced = "1.3.1"
log = "0.4.11"
enumflags2 = "0.7.7"
num-derive = "0.4.2"
num-traits = "0.2.12"
hostname-validator = "1.1.0"
regex = "1.3.9"
zeroize = { version = "1.5.7", features = ["zeroize_derive"] }
tss-esapi-sys = { path = "../tss-esapi-sys", version = "0.5.0" }
oid = { version = "0.2.1", optional = true }
picky-asn1 = { version = "0.9.0", optional = true }
picky-asn1-x509 = { version = "0.13.0", optional = true }
cfg-if = "1.0.0"
strum = { version = "0.26.3", optional = true }
strum_macros = { version = "0.26.4", optional = true }
paste = "1.0.14"
getrandom = "0.2.11"

[dev-dependencies]
env_logger = "0.11.5"
sha2 = "0.10.1"
serde_json = "^1.0.108"
tss-esapi = { path = ".", features = [
    "integration-tests",
    "serde",
    "abstraction",
] }


[build-dependencies]
semver = "1.0.7"

[features]
default = ["abstraction"]
generate-bindings = ["tss-esapi-sys/generate-bindings"]
abstraction = ["oid", "picky-asn1", "picky-asn1-x509"]
integration-tests = ["strum", "strum_macros"]
