[package]
name = "tss-esapi"
version = "8.0.0-alpha"
authors = ["Parsec Project Contributors"]
edition = "2021"
description = "Rust-native wrapper around TSS 2.0 Enhanced System API"
readme = "README.md"
keywords = ["tpm", "tss", "esys", "esapi"]
categories = ["api-bindings", "external-ffi-bindings", "cryptography"]
license = "Apache-2.0"
repository = "https://github.com/parallaxsecond/rust-tss-esapi"
documentation = "https://docs.rs/crate/tss-esapi"
rust-version = "1.74.0"

[[example]]
name = "hmac"

[[example]]
name = "certify"
required-features = ["abstraction"]

[dependencies]
bitfield = "0.17.0"
serde = { version = "1.0.115", features = [
    "alloc",
    "derive",
], optional = true, default-features = false }
malloced = "1.3.1"
log = "0.4.11"
enumflags2 = "0.7.7"
num-derive = "0.4.2"
num-traits = "0.2.12"
hostname-validator = "1.1.0"
regex = "1.3.9"
zeroize = { version = "1.5.7", features = ["zeroize_derive"] }
tss-esapi-sys = { path = "../tss-esapi-sys", version = "0.5.0" }
x509-cert = { version = "0.2.0", optional = true }
ecdsa = { version = "0.16.9", features = [
    "der",
    "hazmat",
    "arithmetic",
    "verifying",
], optional = true }
elliptic-curve = { version = "0.13.8", optional = true, features = [
    "alloc",
    "pkcs8",
] }
p192 = { version = "0.13.0", optional = true }
p224 = { version = "0.13.2", optional = true }
p256 = { version = "0.13.2", optional = true }
p384 = { version = "0.13.0", optional = true }
p521 = { version = "0.13.3", optional = true }
pkcs8 = { version = "0.10.2", optional = true }
rsa = { version = "0.9", optional = true }
sha1 = { version = "0.10.6", optional = true }
sha2 = { version = "0.10.8", optional = true }
sha3 = { version = "0.10.8", optional = true }
sm2 = { version = "0.13.3", optional = true }
sm3 = { version = "0.4.2", optional = true }
digest = { version = "0.10.7", optional = true }
signature = { version = "2.2.0", features = ["std"], optional = true }
cfg-if = "1.0.0"
strum = { version = "0.26.3", optional = true }
strum_macros = { version = "0.26.4", optional = true }
paste = "1.0.14"
getrandom = "0.2.11"

[dev-dependencies]
env_logger = "0.11.5"
serde_json = "^1.0.108"
sha2 = { version = "0.10.8", features = ["oid"] }
tss-esapi = { path = ".", features = [
    "integration-tests",
    "serde",
    "abstraction",
    "rustcrypto-full",
] }
x509-cert = { version = "0.2.0", features = ["builder"] }

[build-dependencies]
semver = "1.0.7"

[features]
default = ["abstraction"]
generate-bindings = ["tss-esapi-sys/generate-bindings"]
abstraction = ["rustcrypto"]
integration-tests = ["strum", "strum_macros"]
rustcrypto = [
    "digest",
    "ecdsa",
    "elliptic-curve",
    "pkcs8",
    "signature",
    "x509-cert",
]
rustcrypto-full = [
    "rustcrypto",
    "p192",
    "p224",
    "p256",
    "p384",
    "p521",
    "rsa",
    "sha1",
    "sha2",
    "sha3",
    "sm2",
    "sm3",
]
sha1 = ["dep:sha1", "rsa?/sha1"]
sha2 = ["dep:sha2", "rsa?/sha2"]
bundled = ["tss-esapi-sys/bundled"]
