[package]
name = "tss-esapi"
version = "7.6.0"
authors = ["Parsec Project Contributors"]
edition = "2018"
description = "Rust-native wrapper around TSS 2.0 Enhanced System API"
readme = "README.md"
keywords = ["tpm", "tss", "esys", "esapi"]
categories = ["api-bindings", "external-ffi-bindings", "cryptography"]
license = "Apache-2.0"
repository = "https://github.com/parallaxsecond/rust-tss-esapi"
documentation = "https://docs.rs/crate/tss-esapi"
rust-version = "1.85.0"

[dependencies]
bitfield = "0.19.4"
serde = { version = "1.0.115", features = ["derive"] }
mbox = "0.7"
log = "0.4.11"
enumflags2 = "0.7.1"
num-derive = "0.4.0"
num-traits = "0.2.12"
hostname-validator = "1.1.0"
regex = "1.3.9"
zeroize = { version = "1.1.0", features = ["zeroize_derive"] }
tss-esapi-sys = { path = "../tss-esapi-sys", version = "0.5.0" }
oid = "0.2.1"
picky-asn1 = "0.10.1"
picky-asn1-x509 = "0.15.4"
getrandom = "0.4.2"

[dev-dependencies]
env_logger = "0.11.10"
sha2 = "0.11.0"

[features]
generate-bindings = ["tss-esapi-sys/generate-bindings"]
